2009-06-26  H. İbrahim Güngör  <h.ibrahim.gungor@gmail.com>
	* bin/network.py: Show connection states

2009-06-10  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/mudur.py: Clear previous connection states

2009-06-04  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/service.py: Use comar.Link()

2009-05-26  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/network.py: Print colorized message when bringing up/down the
	profiles, don't offer packages providing no devices when creating
	connections.

2009-05-25  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/*.py: Update copyright dates,
	* bin/mudur.py (Logger.log): Strip color characters before writing to the
	mudur.log file,
	* bin/compat.py: Port the code to COMAR 3.0 structure,
	* bin/network.py:
	- Better formatting on screen,
	- Don't write backend names if there aren't any profiles or devices on that backend,
	- Add support for fancy colors, can be disabled with --no-color,
	- Ask the profile name at the end,
	- Quit immediately if the backend doesn't provide any device
	  instead of asking useless questions.
	* setup.py: Bump version to 3.0.3.

2009-05-21  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/mudur.py (getServices): Omit non existing services

2009-05-21  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (startServices): Don't wait for X11 socket if no head_start
	is defined,
	* bin/mudur.py (UI): Make color characters a dictionary,
	* bin/mudur.py: Refactor messages, drop a useless information message
	about udev,
	* bin/mudur.py (localMount): Drop unreachable code in localMount,
	* bin/mudur.py (UI): Put all the special characters into the color dict,
	* bin/service.py: bus variable is not used, fix translation logic.

2009-05-20  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/mudur.py: Do nothing if device is unplugged.

2009-05-20  Onur Küçük <onur@pardus.org.tr>
	* bin/mudur.py: Add easy colorize support
	* bin/mudur.py: Add color to network and hostname info
