@@ -1,3 +1,7 @@
+2009-06-26  Bahadır Kandemir <bahadir@pardus.org.tr>
+	* bin/mudur.py: Even simplest methods may reply after minutes on virtual
+	machines, thus boot fails while bringing up network devices.
+
 2009-06-26  H. İbrahim Güngör  <h.ibrahim.gungor@gmail.com>
 	* bin/network.py: Show connection states
 
